# chem_279_final_project

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  H2O_comparison.html  README.md  build.sh  build_image.sh  build_python_module.sh  clean.sh  interactive.sh  run.sh  steepest_descent_example.ipynb
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: build_python_module-checkpoint.sh  steepest_descent_example-checkpoint.ipynb
Geometries/: CH3_MP.html  CH3_MP.xyz  CH3_SD.html  CH3_SD.xyz  CH3_Unoptimized.html  CH3_Unoptimized.xyz  CH3_compare.html  H2O_MP.html  H2O_MP.xyz  H2O_SD.xyz  H2O_Unoptimized.xyz  H2O_compare.html  H2_MP.xyz  H2_SD.xyz  H2_Unoptimized.html  H2_Unoptimized.xyz  H2_compare.html  HF_MP.html  HF_MP.xyz  HF_SD.html  HF_SD.xyz  HF_Unoptimized.xyz  HF_compare.html  HO_MP.html  HO_MP.xyz  HO_SD.html  HO_SD.xyz  HO_Unoptimized.html  HO_Unoptimized.xyz  HO_compare.html
MolJSON/: CH3.json  CH3_MPOptimized.json  CH3_SD.json  CH4_MPOptimized.json  H2.json  H2O.json  H2O_MPOptimized.json  H2O_SD.json  H2_MPOptimized.json  H2_MP_test.json  H2_SD.json  H2_opt_test.json  H2_optimization.json  HF.json  HF_MPOptimized.json  HF_SD.json  HF_optimization.json  HO.json  HO_MPOptimized.json  HO_SD.json  NH3_MPOptimized.json
include/: all_headers.hpp  math.hpp
include/basis_functions/: atom.hpp  basis.hpp  gaussian.hpp  overlap.hpp
include/fock/: fock.hpp  hamiltonian.hpp
include/geometry_optimization/: golden.hpp  optimize_geometry.hpp
include/gradient/: gradient.hpp
include/vibration/: vibration.hpp
input/atoms/: CH3.xyz  CH3_MPOptimized.xyz  CH3_SD.xyz  CH4_MPOptimized.xyz  H2.xyz  H2O.xyz  H2O_MPOptimized.xyz  H2O_SD.xyz  H2_MPOptimized.xyz  H2_SD.xyz  HF.xyz  HF_MPOptimized.xyz  HF_SD.xyz  HO.xyz  HO_MPOptimized.xyz  HO_SD.xyz  NH3_MPOptimized.xyz
sd_geometries/: H2O_SD.html  H2O_Unoptimized.html  H2_MP.html  H2_SD.html  HF_Unoptimized.html
src/: Gaussian.hpp  atom.hpp  fock.hpp  hw_5_2.cpp  ir_spectrum.cpp  steepest_descent.cpp  steepest_descent_bindings.cpp
tests/: conftest.py  test_hdf5.py
